yarte/tests/fails/derive-struct.rs
use yarte::Template;

#[derive(Template)]
#[template(src = "")]
enum Test {
    F
}

fn main() {}
